--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
 </head>
 
 <body>
-
+    <!-- <canvas></canvas> -->
+    <canvas id="bgCanvas"></canvas><canvas id="terrainCanvas"></canvas>
+    <div class="landscape">
+        <div class="landscapeItem mountains background"></div>
+        <div class="landscapeItem mountains midground"></div>
+        <div class="landscapeItem mountains foreground"></div>
+        <div class="landscapeItem trees background"></div>
+        <div class="landscapeItem trees midground"></div>
+        <div class="landscapeItem trees foreground"></div>
+    </div>
     <div class="container">
         <h1 class="text-center mentors-title py-4">MENTORS<span class="theme">.</span></h1>
         <div class="row">
@@ -857,6 +866,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
