--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <!-- <canvas></canvas> -->
+    <div class="custom-overlay"></div>
     <canvas id="bgCanvas"></canvas><canvas id="terrainCanvas"></canvas>
     <div class="landscape">
         <div class="landscapeItem mountains background"></div>
