--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
                             <h1>Rishab</h1>
                             <h1 class="last-name">Jain</h1>
                             <div class="footer">
-                                <h4>MEC Mentor</h4>
+                                <h4>MTX Mentor</h4>
                                 <a href="#"><i class="fab fa-linkedin-in pt-1"></i></a>
                             </div>
                         </div>
