--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class="overlay">
                         <div class="details">
                             <h1>Anshkirat</h1>
-                            <h1 class="last-name">Dhanju</h1>
+                            <h1 class="last-name">Singh</h1>
                             <div class="footer">
                                 <h4>COE Mentor</h4>
                                 <a href="#"><i class="fab fa-linkedin-in pt-1"></i></a>
@@ -357,7 +357,7 @@
                             <h1>Lekha</h1>
                             <h1 class="last-name">Revankar</h1>
                             <div class="footer">
-                                <h4>COE Mentor</h4>
+                                <h4>ENC Mentor</h4>
                                 <a href="#"><i class="fab fa-linkedin-in pt-1"></i></a>
                             </div>
                         </div>
@@ -427,7 +427,7 @@
                             <h1>Nimish</h1>
                             <h1 class="last-name">Shangle</h1>
                             <div class="footer">
-                                <h4>MEX Mentor</h4>
+                                <h4>MTX Mentor</h4>
                                 <a href="#"><i class="fab fa-linkedin-in pt-1"></i></a>
                             </div>
                         </div>
@@ -497,7 +497,7 @@
                             <h1>Pranav</h1>
                             <h1 class="last-name">Tushar</h1>
                             <div class="footer">
-                                <h4>ELE Mentor</h4>
+                                <h4>EIC Mentor</h4>
                                 <a href="#"><i class="fab fa-linkedin-in pt-1"></i></a>
                             </div>
                         </div>
