prajwal's branch chnge

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <nav class="p-3 d-none d-md-block">
+    <nav class="p-3">
         <a class="navbar-brand" href="/"><img src="./assets/FROSH2020_logo_white.png" alt=""></a>
   
         <!-- <div class="navbar-nav  ml-auto">
@@ -172,7 +172,7 @@
                             <h1 class="last-name">Singh</h1>
                             <div class="footer">
                                 <h4>ECE Mentor</h4>
-                                <a href="https://www.linkdin.com/avnoorsingh-2431"><i class="fab fa-linkedin pt-1"></i></a>
+                                <a href="https://www.linkedin.com/avnoorsingh-2431"><i class="fab fa-linkedin pt-1"></i></a>
                             </div>
                         </div>
                     </div>
@@ -493,7 +493,7 @@
                             <h1>Prajwal</h1>
                             <h1 class="last-name">Sharma</h1>
                             <div class="footer">
-                                <h4>EIC Mentor</h4>
+                                <h4>COE Mentor</h4>
                                 <a href="https://www.linkedin.com/in/prajwal-sharma-b397b91b3"><i class="fab fa-linkedin pt-1"></i></a>
                             </div>
                         </div>
