--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <h1 class="last-name">Arora</h1>
                             <div class="footer">
                                 <h4>ECE Mentor</h4>
-                                <a href="#"><i class="fab fa-linkedin pt-1"></i></a>
+                                <a href="https://www.linkedin.com/in/aaryan-arora-0b79a51b1"><i class="fab fa-linkedin pt-1"></i></a>
                             </div>
                         </div>
                     </div>
