--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                             <h1 class="last-name">Singh</h1>
                             <div class="footer">
                                 <h4>ECE Mentor</h4>
-                                <a href="https://www.linkedin.com/avnoorsingh-2431"><i class="fab fa-linkedin pt-1"></i></a>
+                                <a href="https://www.linkedin.com/in/avnoor-singh-413591192/"><i class="fab fa-linkedin pt-1"></i></a>
                             </div>
                         </div>
                     </div>
@@ -298,7 +298,7 @@
                             <h1 class="last-name">Bansal</h1>
                             <div class="footer">
                                 <h4>COE Mentor</h4>
-                                <a href="https://www.linkedin.com/feed/"><i class="fab fa-linkedin pt-1"></i></a>
+                                <a href="https://www.linkedin.com/in/harshitabansal/"><i class="fab fa-linkedin pt-1"></i></a>
                             </div>
                         </div>
                     </div>
@@ -395,8 +395,8 @@
                             <h1>Meghna</h1>
                             <h1 class="last-name">Rai</h1>
                             <div class="footer">
-                                <h4>ELE Mentor</h4>
-                                <a href="https://www.linkedin.com/in/meghna-rai-ba81331b4?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B668yYdmWSkePkk9ksVXFHQ%3D%3D"><i class="fab fa-linkedin pt-1"></i></a>
+                                <h4>COE Mentor</h4>
+                                <a href="https://www.linkedin.com/in/meghna-rai-ba81331b4/"><i class="fab fa-linkedin pt-1"></i></a>
                             </div>
                         </div>
                     </div>
