linkedin profile added

--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
                             <h1 class="last-name">Aggarwal</h1>
                             <div class="footer">
                                 <h4>ENC Mentor</h4>
-                                <a href="#"><i class="fab fa-linkedin pt-1"></i></a>
+                                <a href="https://www.linkedin.com/in/rishab-aggarwal/"><i class="fab fa-linkedin pt-1"></i></a>
                             </div>
                         </div>
                     </div>
