--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel='icon' href='./assets/favicon.png' type='image/x-icon'>
+    <link rel='icon' href='./assets/favicon.png' type='image/png'>
 </head>
 
 <body>
